# pydator

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: basic_usage.py
pydator/: base_rule.py  exceptions.py  rules.py  validator.py
pydator/rules/: __init__.py  boolean.py  contains.py  date.py  email.py  float_rule.py  in_rule.py  integer.py  max.py  mime.py  min.py  number.py  regex.py  required_rule.py  string_rule.py  url.py
tests/: test_validator.py
