[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydator"
version = "1.1.3"
description = "A simple and hands-on validation library for Python."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Seam Uddin", email = "seamuddin.me@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/seamuddin/pydator"
Repository = "https://github.com/seamuddin/pydator"
BugTracker = "https://github.com/seamuddin/pydator/issues"
Documentation = "https://github.com/seamuddin/pydator#readme"
